--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.2",
+    "@mui/material": "^5.0.4",
+    "@mui/styles": "^5.0.1",
+    "@mui/x-data-grid": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
